# file-integrity

./: .gitignore  CMakeLists.txt  Digest.h  LICENSE.md  build.sh  config.json  config.md  main.cpp  path_list.json  path_list.md  readme.md
cmake/: FindBerkeleyDB.cmake
include/plog/: LICENSE
report/: readme.md
src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Database.cpp  Database.h  Digest.cpp  Digest.h  Storage.cpp  Storage.h  argument_parser.cpp  argument_parser.h  client.cpp  config.cpp  config.h  config_parser.cpp  config_parser.h  config_unit.cpp  config_unit.h  daemon.cpp  daemon.h  database.cpp  database.h  db_record.cpp  db_record.h  digest.cpp  digest.h  integrity.cpp  integrityctl.cpp  ipc.cpp  ipc.h  logging.cpp  logging.h  main.cpp  path_list_parser.cpp  path_list_parser.h  storage.cpp  storage.h
